@@ -1959,6 +1959,32 @@ Result:
         [/replace_map]
     [/event]
 
+    [label]
+        x,y=9,2
+        text="map change2"
+    [/label]
+
+    [event]
+        name=moveto
+        first_time_only=no
+        [filter]
+            x,y=9,2
+        [/filter]
+        [message]
+            side=2
+            message="Suddenly, Caves!!"
+        [/message]
+        [replace_map]
+            map="{campaigns/Heir_To_The_Throne/maps/15_The_Lost_General.map}"
+            shrink=yes
+            expand=yes
+        [/replace_map]
+        [replace_schedule]
+            {UNDERGROUND}
+            {DEEP_UNDERGROUND}
+        [/replace_schedule]
+    [/event]
+
     # Capture connected villages near 13,2 for team 2
     [event]
         name=prestart
